## Process this file with automake to produce Makefile.in

#lplex_datadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/@PACKAGE@
lplex_datadir = @datadir/$(PACKAGE)

lplex_data_DATA = \
	black_NTSC_352x240.jpg \
	black_NTSC_352x480.jpg \
	black_NTSC_704x480.jpg \
	black_NTSC_720x480.jpg \
	black_PAL_352x288.jpg \
	black_PAL_352x576.jpg \
	black_PAL_704x576.jpg \
	black_PAL_720x576.jpg

EXTRA_DIST = $(lplex_data_DATA)
