noinst_HEADERS=amg.h ats.h atsi.h audio2.h auxiliary.h commonvars.h dvda-author.h file_input_parsing.h samg.h \
               videoimport.h ports.h lexer.h command_line_parsing.h \
               launch_manager.h structures.h multichannel.h menu.h asvs.h xml.h sound.h version.h ats2wav.h
if WITH_SOX
noinst_HEADERS+=libsoxconvert.h
endif
